; ModuleID = '/home/carl/AnghaBench/linux/drivers/pinctrl/actions/extr_pinctrl-owl.c_owl_group_pinconf_val2arg.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pinctrl/actions/extr_pinctrl-owl.c_owl_group_pinconf_val2arg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.owl_pingroup = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@ENOTSUPP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.owl_pingroup*, i32, i32*)* @owl_group_pinconf_val2arg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @owl_group_pinconf_val2arg(%struct.owl_pingroup* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.owl_pingroup*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store %struct.owl_pingroup* %0, %struct.owl_pingroup** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %8 = load i32, i32* %6, align 4
  switch i32 %8, label %33 [
    i32 129, label %9
    i32 128, label %24
  ]

9:                                                ; preds = %3
  %10 = load i32*, i32** %7, align 8
  %11 = load i32, i32* %10, align 4
  switch i32 %11, label %20 [
    i32 132, label %12
    i32 131, label %14
    i32 130, label %16
    i32 133, label %18
  ]

12:                                               ; preds = %9
  %13 = load i32*, i32** %7, align 8
  store i32 2, i32* %13, align 4
  br label %23

14:                                               ; preds = %9
  %15 = load i32*, i32** %7, align 8
  store i32 4, i32* %15, align 4
  br label %23

16:                                               ; preds = %9
  %17 = load i32*, i32** %7, align 8
  store i32 8, i32* %17, align 4
  br label %23

18:                                               ; preds = %9
  %19 = load i32*, i32** %7, align 8
  store i32 12, i32* %19, align 4
  br label %23

20:                                               ; preds = %9
  %21 = load i32, i32* @EINVAL, align 4
  %22 = sub nsw i32 0, %21
  store i32 %22, i32* %4, align 4
  br label %37

23:                                               ; preds = %18, %16, %14, %12
  br label %36

24:                                               ; preds = %3
  %25 = load i32*, i32** %7, align 8
  %26 = load i32, i32* %25, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %24
  %29 = load i32*, i32** %7, align 8
  store i32 1, i32* %29, align 4
  br label %32

30:                                               ; preds = %24
  %31 = load i32*, i32** %7, align 8
  store i32 0, i32* %31, align 4
  br label %32

32:                                               ; preds = %30, %28
  br label %36

33:                                               ; preds = %3
  %34 = load i32, i32* @ENOTSUPP, align 4
  %35 = sub nsw i32 0, %34
  store i32 %35, i32* %4, align 4
  br label %37

36:                                               ; preds = %32, %23
  store i32 0, i32* %4, align 4
  br label %37

37:                                               ; preds = %36, %33, %20
  %38 = load i32, i32* %4, align 4
  ret i32 %38
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
